name:                jose
version:             0.8.0.0
synopsis:
  Javascript Object Signing and Encryption and JSON Web Token library
description:
  .
  An implementation of the Javascript Object Signing and Encryption
  (JOSE) and JSON Web Token (JWT; RFC 7519) formats.
  .
  The JSON Web Signature (JWS; RFC 7515) implementation is complete.
  .
  EdDSA signatures (RFC 8037) are supported (Ed25519 only).
  .
  JWK Thumbprint (RFC 7638) is supported (requires /aeson/ >= 0.10).
  .
  JSON Web Encryption (JWE; RFC 7516) is not yet implemented.
  .
  The __ECDSA implementation is vulnerable to timing attacks__ and
  should only be used for verification.

homepage:            https://github.com/frasertweedale/hs-jose
bug-reports:         https://github.com/frasertweedale/hs-jose/issues
license:             Apache-2.0
license-file:        LICENSE
extra-source-files:
  README.md
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2013-2018  Fraser Tweedale
category:            Cryptography
build-type:          Simple
cabal-version:       >= 1.8
tested-with:
  GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.3

flag demos
  description: Build demonstration programs
  default: False

library
  exposed-modules:
    Crypto.JOSE
    Crypto.JOSE.Compact
    Crypto.JOSE.Error
    Crypto.JOSE.Header
    Crypto.JOSE.JWE
    Crypto.JOSE.JWK
    Crypto.JOSE.JWK.Store
    Crypto.JOSE.JWS
    Crypto.JOSE.Types
    Crypto.JWT
    Crypto.JOSE.AESKW
    Crypto.JOSE.JWA.JWK
    Crypto.JOSE.JWA.JWS
    Crypto.JOSE.JWA.JWE
    Crypto.JOSE.JWA.JWE.Alg
    Crypto.JOSE.Types.WrappedURI

  other-modules:
    Crypto.JOSE.TH
    Crypto.JOSE.Types.Internal
    Crypto.JOSE.Types.WrappedNonEmpty

  build-depends:
    aeson                >= 1.4.2 && < 1.5,
    attoparsec           >= 0.13.2 && < 0.14,
    base                 >= 4.8 && < 5,
    base64-bytestring    == 1.0.*,
    bytestring           == 0.10.*,
    concise              >= 0.1 && < 0.2,
    containers           >= 0.5 && < 0.7,
    contravariant        >= 1.4 && < 1.5,
    cryptonite           >= 0.7 && < 0.26,
    exceptions           >= 0.10.0 && < 0.11,
    lens                 >= 4.16 && < 4.18,
    mtl                  >= 2 && < 2.3,
    memory               >= 0.7 && < 0.15,
    modern-uri           >= 0.3.0 && < 0.4,
    monad-time           >= 0.1 && < 0.4,
    network-uri          >= 2.6 && < 2.7,
    QuickCheck           >= 2 && < 2.13,
    quickcheck-instances >= 0.3 && < 0.4,
    safe                 >= 0.3 && < 0.4,
    semigroups           >= 0.15 && < 0.19,
    semigroupoids        >= 5 && < 6,
    template-haskell     >= 2.4 && < 2.15,
    text                 >= 1.1 && < 1.3,
    time                 >= 1.5 && < 1.10,
    unordered-containers == 0.2.*,
    vector               >= 0.12 && < 0.13,
    waargonaut           >= 0.5 && < 0.6,
    x509                 >= 1.4 && < 1.8

  ghc-options:    -Wall
  hs-source-dirs: src

source-repository head
  type: git
  location: https://github.com/frasertweedale/hs-jose.git

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  other-modules:
    AESKW
    JWK
    JWS
    JWT
    Properties
    Types
    WrappedExceptT
  ghc-options:    -Wall

  build-depends:
    base
    , attoparsec
    , base64-bytestring
    , containers
    , cryptonite
    , lens
    , memory
    , monad-time
    , mtl
    , semigroups
    , template-haskell
    , safe
    , aeson
    , unordered-containers
    , bytestring
    , text
    , time
    , network-uri
    , vector
    , x509

    , concise
    , jose

    , tasty
    , tasty-hspec >= 1.0
    , tasty-quickcheck
    , hspec
    , QuickCheck
    , quickcheck-instances
    , modern-uri

executable jose-example
  if !flag(demos)
    buildable: False
  hs-source-dirs: example
  ghc-options:    -Wall
  main-is:  Main.hs
  other-modules:
    KeyDB
    JWS

  build-depends:
    base
    , aeson
    , bytestring
    , lens
    , mtl
    , semigroups
    , text
    , unix
    , jose
